package org.example;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class Task {
    private static int counter = 0;

    private double taskSize;
    private boolean isRecycle = false;

    public Task() {}
    public Task(double taskSize) { this.taskSize = taskSize;
        counter++;
//        System.out.format(
//                "Task #%d created, size - %f\n", counter, taskSize
//        );
    }

}
