package org.example.model_parts;

public class Input extends Process{
}
