package org.example.model_parts;

public class Output extends Process{
}
