package org.example.parts;

public class Dispose extends Element {
    static int counter = 0;

    public static void resetCounter() {
        counter = 0;
    }
}
