package org.example.util;

public enum Distribution {
    EXPONENTIAL,
    NORMAL,
    UNIFORM
}
